--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curso Javascript</title>
-    <link rel="stylesheet" href="./estilos.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js" integrity="sha512-zYXldzJsDrNKV+odAwFYiDXV2Cy37cwizT+NkuiPGsa9X1dOz04eHvUWVuxaJ299GvcJT31ug2zO4itXBjFx4w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="estilos.css" />
+      <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"
+    integrity="sha512-zYXldzJsDrNKV+odAwFYiDXV2Cy37cwizT+NkuiPGsa9X1dOz04eHvUWVuxaJ299GvcJT31ug2zO4itXBjFx4w=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+
   </head>
 
   <body>
-      <div class="cabecera">
-        <p class="titulo">Gestor de tareas</p>
-      </div>
+    <div class="cabecera">
+      <p class="titulo">Gestor de tareas</p>
+    </div>
     <div class="contenedorBotones">
-      <input type="text" class="input" placeholder="Introduce los datos" />
+      <input
+        type="text"
+        class="input"
+        placeholder="Introduce los datos"
+        maxlength="225"
+      />
       <input type="submit" class="boton" value="Guardar" />
       <input type="submit" class="botonImprimir" value="Imprimir" />
     </div>
     <nav class="contenedorPrincipal" draggable="true"></nav>
   </body>
-  <script src="/scripts.js"></script>
+  <script src="scripts.js"></script>
 </html>
