--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Curso Javascript</title>
+    <title>Gestor de tareas</title>
     <link rel="stylesheet" href="estilos.css" />
-      <script
+    <link rel="shortcut icon" href="1486506264-hamburger-list-menu-options-bars-stack_81469.ico" type="image/x-icon">
+  <script
     src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"
     integrity="sha512-zYXldzJsDrNKV+odAwFYiDXV2Cy37cwizT+NkuiPGsa9X1dOz04eHvUWVuxaJ299GvcJT31ug2zO4itXBjFx4w=="
     crossorigin="anonymous"
