--- a/index.html
+++ b/index.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gestor de tareas</title>
-    <link rel="stylesheet" href="estilos.css" />
-    <link rel="shortcut icon" href="1486506264-hamburger-list-menu-options-bars-stack_81469.ico" type="image/x-icon">
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"
-    integrity="sha512-zYXldzJsDrNKV+odAwFYiDXV2Cy37cwizT+NkuiPGsa9X1dOz04eHvUWVuxaJ299GvcJT31ug2zO4itXBjFx4w=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
 
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gestor de tareas</title>
+  <link rel="stylesheet" href="estilos.css" />
+  <link rel="shortcut icon" href="1486506264-hamburger-list-menu-options-bars-stack_81469.ico" type="image/x-icon">
 
-  <body>
-    <div class="cabecera">
-      <p class="titulo">Gestor de tareas</p>
-    </div>
-    <div class="contenedorBotones">
-      <input
-        type="text"
-        class="input"
-        placeholder="Introduce los datos"
-        maxlength="225"
-      />
-      <input type="submit" class="boton" value="Guardar" />
-      <input type="submit" class="botonImprimir" value="Imprimir" />
-    </div>
-    <nav class="contenedorPrincipal" draggable="true"></nav>
-  </body>
-  <script src="scripts.js"></script>
+</head>
+
+<body>
+  <div class="cabecera">
+    <p class="titulo">Gestor de tareas</p>
+  </div>
+  <div class="contenedorBotones">
+    <input type="text" class="input" placeholder="Introduce los datos" maxlength="225" />
+    <input type="submit" class="boton" value="Guardar" />
+    <input type="submit" class="botonImprimir" value="Imprimir" />
+  </div>
+  <nav class="contenedorPrincipal"></nav>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"
+  integrity="sha512-zYXldzJsDrNKV+odAwFYiDXV2Cy37cwizT+NkuiPGsa9X1dOz04eHvUWVuxaJ299GvcJT31ug2zO4itXBjFx4w=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="scripts.js"></script>
 </html>
